[gd_scene load_steps=4 format=3 uid="uid://dvkxcgdk0goul"]

[ext_resource type="Script" uid="uid://bgvqsvn6p7ojh" path="res://ui/poultry_man_menu/chicken_inventory/chicken_inventory.gd" id="1_uruig"]
[ext_resource type="PackedScene" uid="uid://cc55r8e7gadvt" path="res://ui/poultry_man_menu/chicken_inventory/equiped_item_slot/equiped_item_slot.tscn" id="2_abcde"]
[ext_resource type="Script" uid="uid://c7aisl0ti2rec" path="res://utilities/button_focus.gd" id="3_5f1dx"]

[node name="ChickenInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uruig")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"HeaderLarge"
text = "Equipment"

[node name="SubtitleLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "[center][font_size=25][color=gray][i]Items are automatically equipped[/i][/color][/font_size][/center]
"
fit_content = true

[node name="EquipmentGrid" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 2

[node name="MeleeLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid"]
layout_mode = 2
size_flags_vertical = 1
text = "Melee Weapon:"
vertical_alignment = 1

[node name="MeleeSlot" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid" instance=ExtResource("2_abcde")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="RangedLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid"]
layout_mode = 2
size_flags_vertical = 1
text = "Ranged Weapon:"
vertical_alignment = 1

[node name="RangedSlot" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid" instance=ExtResource("2_abcde")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Ability1Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid"]
layout_mode = 2
size_flags_vertical = 1
text = "Ability Slot 1:"
vertical_alignment = 1

[node name="AbilitySlot1" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid" instance=ExtResource("2_abcde")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Ability2Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid"]
layout_mode = 2
size_flags_vertical = 1
text = "Ability Slot 2:"
vertical_alignment = 1

[node name="AbilitySlot2" parent="Panel/MarginContainer/VBoxContainer/EquipmentGrid" instance=ExtResource("2_abcde")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Exit"
script = ExtResource("3_5f1dx")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
